# mx-semantics

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  Makefile  README.md  auto-allocate.md  bigIntOps.md  coverage.py  cryptoei.md  elrond-config.md  elrond-node.md  elrond.md  elrondei.md  esdt.md  flake.nix  foundry.md  generate-claims.sh  kasmer.md  kbuild.toml  kelrond  mandos.md  rule_coverage.py  run-elrond-tests.py  run_elrond_tests.py  run_foundry.py  smallIntOps.md  wasm-coverage.md
.github/actions/with-docker/: action.yml
.github/workflows/: master-push.yml  test-pr.yml  update-poetry-for-wasm-semantics.yml  update-version.yml
data/: async-call.k  bytes-type.k  int-type.k  list-bytes.k  map-bytes-to-bytes.k  map-int-to-bytes.k
elrondapi/: bigIntOps.md  cryptoei.md  elrondapi.md  elrondei.md  manBufOps.md  managedei.md  smallIntOps.md
kmultiversx/: .cruft.json  .flake8  Makefile  README.md  flake.nix  pyproject.toml
kmultiversx/src/kmultiversx/: foundry.py  kasmer.py  kelrond.py  runtime.py  scenario.py  utils.py
kmultiversx/src/kmultiversx/kdist/: plugin.py
kmultiversx/src/kmultiversx/kdist/mx-semantics/: elrond-config.md  elrond-node.md  elrond.md  esdt.md  kasmer.md  mandos.md  switch.md
kmultiversx/src/kmultiversx/kdist/mx-semantics/data/: async-call.k  bytes-type.k  list-bytes.k  map-bytes-to-bytes.k  map-int-to-bytes.k
kmultiversx/src/kmultiversx/kdist/mx-semantics/vmhooks/: async.md  baseOps.md  bigIntOps.md  cryptoei.md  manBufOps.md  managedConversions.md  managedei.md  smallIntOps.md  utils.md  vmhooks.md
kmultiversx/src/kmultiversx/kdist/runtime/: llvm-kasmer.json  llvm-mandos.json
kmultiversx/src/kmultiversx/scripts/: kelrond.py  kelrond.sh
kmultiversx/src/tests/: conftest.py
kmultiversx/src/tests/unit/: test_generate_claim.py
package/: version.sh
pykelrond/: .cruft.json  Makefile  README.md  flake.nix  pyproject.toml
pykelrond/src/pykelrond/: foundry.py
src/: auction-mock.wasm  auction-mock.wat  delegation.wasm  delegation.wat  elrond-runtime.loaded.json  elrond-runtime.loaded.wat  elrond-runtime.wat  elrond-runtime.wat.json
src/esdt-system-sc/: Cargo.toml
src/esdt-system-sc/meta/: Cargo.toml
src/esdt-system-sc/meta/src/: main.rs
src/esdt-system-sc/scenarios/: esdt_system_sc.scen.json
src/esdt-system-sc/src/: esdt_system_sc.rs
src/esdt-system-sc/wasm/: Cargo.toml
src/esdt-system-sc/wasm/src/: lib.rs
src/testapi/: Cargo.toml
src/testapi/src/: testapi.rs
tests/: alloc_features.test  basic_features.test  composability_features.test  multisig.test  uncovered-rules.txt
tests/contracts/: elrond-adder-expected.out  elrond-basic-features-expected.out  elrond-crowdfunding-egld-expected.out  elrond-lottery-egld-expected.out  elrond-multisig-expected.out
tests/contracts/addercaller/: Cargo.toml
tests/contracts/callee/: Cargo.toml
tests/contracts/caller/: Cargo.toml
tests/contracts/test_adder_concrete/: Cargo.toml  multicontract.toml
tests/contracts/test_adder_concrete/meta/: Cargo.toml
tests/contracts/test_adder_concrete/src/: test_adder.rs
tests/contracts/test_adder_concrete/wasm/: Cargo.toml
tests/contracts/test_adder_concrete/wasm/src/: lib.rs
tests/contracts/test_crowdfunding-esdt/: Cargo.toml  foundry.json  multicontract.toml
tests/contracts/test_crowdfunding-esdt/meta/: Cargo.toml
tests/contracts/test_crowdfunding-esdt/meta/src/: main.rs
tests/contracts/test_crowdfunding-esdt/src/: test_crowdfunding_esdt.rs
tests/contracts/test_crowdfunding-esdt/wasm/: Cargo.toml
tests/contracts/test_crowdfunding-esdt/wasm/src/: lib.rs
tests/contracts/test_multisig/: Cargo.toml  multicontract.toml
tests/contracts/test_multisig/meta/: Cargo.toml
tests/contracts/test_multisig/src/: test_multisig.rs  testapi.rs
tests/contracts/test_multisig/wasm/: Cargo.toml
tests/contracts/test_nft/: Cargo.toml  foundry.json
tests/contracts/test_nft/meta/: Cargo.toml
tests/contracts/test_nft/meta/src/: main.rs
tests/contracts/test_nft/src/: test_nft.rs
tests/contracts/test_nft/wasm/: Cargo.toml
tests/contracts/test_nft/wasm/src/: lib.rs
tests/contracts/test_pair/: Cargo.toml  foundry.json  multicontract.toml
tests/contracts/test_pair/meta/: Cargo.toml
tests/contracts/test_pair/meta/src/: main.rs
tests/contracts/test_pair/scenarios/: test_pair.scen.json
tests/contracts/test_pair/src/: test_pair.rs
tests/contracts/test_pair/wasm/: Cargo.toml
tests/contracts/test_pair/wasm/src/: lib.rs
tests/coverage/: branching.wat  coverage-expected.out  coverage.scen.json
tests/mandos/: deploy_call.steps.json  dummy_contract.wasm  dummy_contract.wat  empty.steps.json  external.scen.json  set_state.steps.json  storage.scen.json  transfer.scen.json
tests/simple/: auto-allocate.wast  auto-allocate.wast.llvm-status  bad-big-int.wast  bad-bounds.wast  bigInt-and-arguments-host-calls.wast  check-no-payment.wast  deploy-and-call.wast  deploy_and_call.wast  host-calls.wast  hostCalls.wast
vmhooks/: async.md  baseOps.md  bigIntOps.md  cryptoei.md  eei-helpers.md  manBufOps.md  managedConversions.md  managedei.md  smallIntOps.md  utils.md  vmhooks.md
(+83 files in other folders)
