[package]
name = "esdt-system-sc-wasm"
version = "0.0.0"
authors = ["Runtime Verification"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.esdt-system-sc]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.50.1"

[workspace]
members = ["."]
