[package]
name = "test_crowdfunding-esdt"
version = "0.0.1"
authors = [ "Runtime Verification",]
edition = "2018"
publish = false

[lib]
path = "src/test_crowdfunding_esdt.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.43.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.43.3"

[dependencies]
testapi = { version = "0.1.0", path = "../../../src/testapi" }
