[package]
name = "test_crowdfunding-esdt"
version = "0.0.1"
authors = [ "Runtime Verification",]
edition = "2018"
publish = false

[lib]
path = "src/test_crowdfunding_esdt.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.50.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.48.0"

[dependencies]
testapi = { version = "0.1.0", path = "../../../src/testapi" }
