[package]
name = "test_multisig"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/test_multisig.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.50.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.48.0"

[dependencies]
testapi = { version = "0.1.0", path = "../../../src/testapi" }
